welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
  recule()}
        ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
  recule()}
        ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (getCouleurSol() == Color.green) {
       ^